Support https urls for resources

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,16 @@
 	      <artifactId>org.eclipse.jgit</artifactId>
 	      <version>3.4.1.201406201815-r</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>com.intrbiz.util</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>1.0.0-SNAPSHOT</version>
+	    </dependency>
+	    <dependency>
+	    	<groupId>com.intrbiz.core</groupId>
+	    	<artifactId>core</artifactId>
+	    	<version>1.0.0-SNAPSHOT</version>
+	    </dependency>
 	</dependencies>
 	
 	<build>
@@ -77,9 +87,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>com.intrbiz.balsa</groupId>
-				<artifactId>balsa-packaging</artifactId>
-				<version>4.0.0-SNAPSHOT</version>
+				<groupId>com.intrbiz.util</groupId>
+				<artifactId>packaging</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
 				<configuration>
 					<appClass>com.intrbiz.blog.BlogApp</appClass>
 				</configuration>
@@ -87,7 +97,7 @@
 					<execution>
 						<phase>package</phase>
 						<goals>
-							<goal>balsa</goal>
+							<goal>intrbiz-package</goal>
 						</goals>
 					</execution>
 				</executions>
